# unwrapped

./: .editorconfig  .rustfmt.toml  .taplo.toml  .typos.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml
crates/unwrapped/: CHANGELOG.md  Cargo.toml  README.md
crates/unwrapped-core/: CHANGELOG.md  Cargo.toml  README.md
crates/unwrapped-core/docs/: ARCHITECTURE.md
crates/unwrapped-core/src/: lib.rs  unwrapped.rs  utils.rs  wrapped.rs
crates/unwrapped-core/tests/: macro_usage.rs
crates/unwrapped-derive/: Cargo.toml  README.md
crates/unwrapped-derive/docs/: ARCHITECTURE.md
crates/unwrapped-derive/src/: lib.rs
crates/unwrapped/docs/: ARCHITECTURE.md
crates/unwrapped/src/: lib.rs
crates/unwrapped/tests/: test.rs
