[workspace]
members = [ "crates/unwrapped", "crates/unwrapped-derive" ]
resolver = "3"

[workspace.package]
categories = [ "development-tools::procedural-macro-helpers" ]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/stayhydated/unwrapped"
version = "0.1.0"

[workspace.dependencies]
bon = "3.6.4"
darling = "0.20.10"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.104"
unwrapped-core = { path = "crates/unwrapped-core", version = "0.1.0" }
unwrapped-derive = { path = "crates/unwrapped-derive", version = "0.1.0" }

[workspace.lints.rust]
unexpected_cfgs = { level = "deny" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
uninlined_format_args = "allow"
unused_trait_names = "warn"

[profile.dev]
codegen-units = 16
debug = "limited"
opt-level = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
