[workspace]
members = [ "crates/unwrapped", "crates/unwrapped-derive" ]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/stayhydated/unwrapped"
rust-version = "1.88"
version = "0.2.1"

[workspace.dependencies]
bon = "3.8.1"
darling = "0.23.0"
ident_case = "1"
proc-macro2 = "1.0.105"
quote = "1.0.43"
syn = "2.0.114"
unwrapped-core = { path = "crates/unwrapped-core", version = "0.2.1" }
unwrapped-derive = { path = "crates/unwrapped-derive", version = "0.2.1" }

[workspace.lints.rust]
unexpected_cfgs = { level = "deny" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
uninlined_format_args = "allow"
unused_trait_names = "warn"

[profile.dev]
codegen-units = 16
debug = "limited"
opt-level = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
