[package]
name = "unwrapped-derive"
description = """
    Derive library for unwrapped
"""
version.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
unwrapped-core = { workspace = true }

[lints]
workspace = true
