[package]
name = "unwrapped-derive"
description = """
    Derive library for unwrapped
"""
readme = "README.md"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
unwrapped-core = { workspace = true }

[lints]
workspace = true
