[package]
name = "unwrapped"
description = """
    The unwrapped crate
"""
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
unwrapped-derive = { optional = true, workspace = true }

[features]
default = [ "derive" ]
derive = [ "dep:unwrapped-derive" ]
