[package]
name = "unwrapped"
description = """
    The unwrapped crate
"""
readme = "README.md"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
unwrapped-derive = { optional = true, workspace = true }

[features]
default = [ "derive" ]
derive = [ "dep:unwrapped-derive" ]
